force-app/main/default/objects/KimbleOne__CreditTemplate__c/KimbleOne__CreditTemplate__c.object-meta.xml
<CustomObject>
    <label>Credit Template</label>
    <nameField>
        <label>Credit Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>