force-app/main/default/objects/KimbleOne__CreditTemplate__c/fields/KimbleOne__CreditUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditUnits__c</fullName>
    <label>Credit Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>