force-app/main/default/objects/KimbleOne__CreditTemplate__c/fields/KimbleOne__CreditValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditValue__c</fullName>
    <label>Credit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>